@@ -2,6 +2,7 @@
 10.10.2011
 - bugfix variable name typo in {html_options} and {html_checkboxes} (Issue #54)
 - bugfix <?xml> tag did create wrong output when caching enabled and the tag was in included subtemplate
+- bugfix Smarty_CacheResource_mysql example was missing strtotime() calls
 
 ===== Smarty-3.1.3  =====
 07.10.2011
